<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_daily"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_daily"
        android:name="kz.dostyk.ozindidamyt.ui.user_profile.fragments.menu_daily.DailyFragment"
        android:label="@string/bottom_menu_1"
        tools:layout="@layout/fragment_profile_daily" />

    <fragment
        android:id="@+id/nav_book"
        android:name="kz.dostyk.ozindidamyt.ui.user_profile.fragments.menu_books.BookAndAngimeFragment"
        android:label="@string/bottom_menu_2"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_quiz"
        android:name="kz.dostyk.ozindidamyt.ui.user_profile.fragments.menu_quiz.MyQuizzesFragment"
        android:label="@string/bottom_menu_3"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_sport"
        android:name="kz.dostyk.ozindidamyt.ui.user_profile.fragments.menu_sport.MySportReportFragment"
        android:label="@string/bottom_menu_4"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_marathon"
        android:name="kz.dostyk.ozindidamyt.ui.user_profile.fragments.menu_marathon.MyMarathonReportFragment"
        android:label="@string/bottom_menu_5"
        tools:layout="@layout/fragment_slideshow" />

</navigation>